--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,8 @@
     Order allow,deny
     Deny from all
 </Files>
+
+<Files "/src/required/constants.php">
+    Order allow,deny
+    Deny from all
+</Files>
